--- a/views/site/footer.ejs
+++ b/views/site/footer.ejs
@@ -58,7 +58,7 @@
 
             <div class="col-lg-12 col-md-12">
                 <div class="copyright-area">
-                    <p>Copyright @2021 StartP. All rights reserved</p>
+                    <p>Copyright @2021 Cognnox Intelligent Systems Pvt. Ltd.</p>
                 </div>
             </div>
         </div>
