--- a/views/site/contact.ejs
+++ b/views/site/contact.ejs
@@ -42,7 +42,7 @@
                             <i data-feather="map-pin"></i>
                         </div>
                         <h3>Visit Here</h3>
-                        <p>27 Division St, New York, NY 10002, United States of America</p>
+                        <p>2Near Bhravan Da Dhaba, above Aye Finance, Abohar, Punjab 152116</p>
                     </div>
                 </div>
 
